# msp430f5529-repro

./: Cargo.toml  memory.x
